Fix overflow in popup

--- a/Speet/wwwroot/css/participants.css
+++ b/Speet/wwwroot/css/participants.css
@@ -14,9 +14,13 @@
     text-align: center;
 }
 
-#participantstable {
+#participantslist {
     padding: 5px 5px;
     height: 340px;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+#participantslist p {
+    display: block;
 }
